--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
+    "eslint-config-next": "^13.0.6",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.3",
     "morgan": "^1.10.0",
+    "netlify-cli": "^12.2.10",
     "node-fetch": "^2.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
